objects/tffa__Party__c.object
<CustomObject>
    <description>A party is an individual or a legal entity  who own or apply  for certain services/products in the bank. 
A party can be an existing customer of the bank or a new prospect.</description>
    <fields>
        <fullName>CZIsOLBEnrollCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is OLB Enroll Completed</description>
        <label>Is OLB Enroll Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CZMDMPartyID__c</fullName>
        <description>MDM Global Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MDM Global ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CellPhoneNumber__c</fullName>
        <description>Cell phone of the party.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Cell phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>Cost center for location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Customer number a unique identifier for customer on core banking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISBranchCode__c</fullName>
        <description>Fis branch code for Location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISDob__c</fullName>
        <description>Date of Birth stored in Fis</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Birth date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISLastName__c</fullName>
        <description>LastName stored in Fis</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAuthenticatedCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Authenticated Customer</description>
        <label>Authenticated Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCrossCharterCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CrossCharter Customer</description>
        <inlineHelpText>If the customer is not having an existing realtionship with this charter but has a relationship in another charter.</inlineHelpText>
        <label>CrossCharter Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDobMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if DOB match in fisdss</description>
        <label>IsDobMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDobMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Dob field missing from MDM Response</description>
        <label>DOB Missing in IBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailIdMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Email Id field missing from MDM Response</description>
        <label>EmailId Missing in IBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExceptionPlanRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Exception Plan Required</description>
        <inlineHelpText>Exception plan is not required to be set for new accounts for existing customers who have transactional accounts older than 30 days.</inlineHelpText>
        <label>ExceptionPlan Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFisDueDiligenceCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Fis Due Diligence Created</description>
        <label>IsFisDueDiligenceCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsKYCRequired__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is KYC Required</description>
        <inlineHelpText>For authenticated customers, Is KYC required to be done?</inlineHelpText>
        <label>KYC Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOLBEnrolled__c</fullName>
        <description>Status of customer&apos;s online banking enrollment Y = Yes , N = No and F = Failure while checking</description>
        <label>IsOLBEnrolled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPhoneNumberMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Phone Number field missing from MDM Response</description>
        <label>Phone Number Missing in IBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSsnMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if SSN match in fisdss</description>
        <label>IsSsnMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYCFraudText__c</fullName>
        <description>KYC Fraud Text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Fraud Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDMUploadRetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MDM Upload Retry Count</description>
        <label>MDM Upload Retry Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDMUploadStatus__c</fullName>
        <description>Status of MDM Upload</description>
        <label>MDM Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfInquires__c</fullName>
        <description>Number Of Inquires</description>
        <label>NumberOfInquires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreferredContactNumber__c</fullName>
        <description>Prefered contact number used as primary contact number for user communication</description>
        <label>Preferred Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PhoneType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecretWordHint__c</fullName>
        <description>A Hint that is asked to jog a customer&apos;s memory of his/her secret word.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Secret Word Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecretWord__c</fullName>
        <description>A word that is used to identify a customer seeking information.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Secret Word</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmountApplicantOwes__c</fullName>
        <description>Total Amount Applicant Owes</description>
        <label>TotalAmountApplicantOwes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AccountingDataProviderStatus__c</fullName>
        <description>The status associated with linking with the accounting data system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounting data provider status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountingDataProvider__c</fullName>
        <description>The provider of accounting data for the party. Usually points to the API used for data retrieval. Can be an accounting system API like Quickbooks or an aggregator API like Codat</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounting data provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountingDataSourceId__c</fullName>
        <description>External id of the party in the external system acting as the source of the accounting data.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounting data source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AccountingDataSource__c</fullName>
        <description>The source of accounting data for the party. Usually points to the accounting system used for data retrieval. e.g. Quickbooks</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accounting data source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AdverseActionNoticeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, a notice is sent out (via email) to the Party if a related decision outcome is Declined.</description>
        <label>Adverse action notice required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AgeOfDependents__c</fullName>
        <description>The number of years of age of a borrower&apos;s dependent.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Age of dependents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Age__c</fullName>
        <description>Age of the individual.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AlternateFirstName__c</fullName>
        <description>An additional first name for the individual . Examples of additional names are : 1) AKA(Also Known As) or Aliases Any other name that a person is also known by, or has been known by in the past. This includes misspelt names or name variations that are to be retained as they have been used to identify this person. More than one alias name may be recorded for a person.

2) Maiden name The family name of any individual prior to being changed at marriage.

3) Other types like Tribal Name, Name at Birth, Stage Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate first name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AlternateFullName__c</fullName>
        <description>An additional full name for the individual . Examples of additional names are : 1) AKA(Also Known As) or Aliases Any other name that a person is also known by, or has been known by in the past. This includes misspelt names or name variations that are to be retained as they have been used to identify this person. More than one alias name may be recorded for a person.

2) Maiden name The family name of any individual prior to being changed at marriage.

3) Other types like Tribal Name, Name at Birth, Stage Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate full name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AlternateLastName__c</fullName>
        <description>An additional last name for the individual . Examples of additional names are : 1) AKA(Also Known As) or Aliases Any other name that a person is also known by, or has been known by in the past. This includes misspelt names or name variations that are to be retained as they have been used to identify this person. More than one alias name may be recorded for a person.

2) Maiden name The family name of any individual prior to being changed at marriage.

3) Other types like Tribal Name, Name at Birth, Stage Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate last name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AlternateMiddleName__c</fullName>
        <description>An additional middle name for the individual . Examples of additional names are : 1) AKA(Also Known As) or Aliases Any other name that a person is also known by, or has been known by in the past. This includes misspelt names or name variations that are to be retained as they have been used to identify this person. More than one alias name may be recorded for a person.

2) Maiden name The family name of any individual prior to being changed at marriage.

3) Other types like Tribal Name, Name at Birth, Stage Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate middle name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AnnualRevenue__c</fullName>
        <description>Annual revenue of the organization</description>
        <label>Annual revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportAuditCopyToken__c</fullName>
        <description>Holds encrypted value of asset audit copy token: Please decrypt before sending to Fannie Mae</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Asset Audit Copy Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportAuditorId__c</fullName>
        <description>Holds auditor Id of asset audit copy token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Asset Auditor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportDaysRequested__c</fullName>
        <description>The total number days requested for asset report</description>
        <label>Financial Asset Report Requested Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportId__c</fullName>
        <description>Holds asset report id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Financial Asset Report Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__AssetReportOn__c</fullName>
        <description>The date and time of report generation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Asset Report Generated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportProvider__c</fullName>
        <description>The provider for asset report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Asset Report Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportStatus__c</fullName>
        <description>The status associated with asset report generation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AssetReportToken__c</fullName>
        <description>Holds encrypted value of asset report token</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Report Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AssetToken__c</fullName>
        <description>Holds encrypted value of asset tokens</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AuthenticationToken__c</fullName>
        <description>Holds value of authentication token for the party generated by external authentication mechanism. Party can be authenticated by Online Banking provider. Same token can be used to integrate with external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Authentication token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AutoCreditDecisionOutcome__c</fullName>
        <description>Outcome of an auto decisioning process. Since the running DecisionOutcome can be overridden, this stores the original outcome. Used for decision tracking, reporting.</description>
        <label>Auto Credit Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AutoCreditDecisionRemarks__c</fullName>
        <description>A snapshot of the rule that resulted in the auto CreditDecisionOutcome. Typically required by audit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Decision Matrix Row</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__AutoKYCDecisionOutcome__c</fullName>
        <description>Outcome of an auto decisioning process. Since the running DecisionOutcome can be overridden, this stores the original outcome. Used for decision tracking, reporting.</description>
        <label>Auto KYC Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__AutoKYCDecisionRemarks__c</fullName>
        <description>A snapshot of the rule that resulted in the auto KYCDecisionOutcome. Typically required by audit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Decision Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__BirthDate__c</fullName>
        <description>The date of birth of the individual</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__BrandCode__c</fullName>
        <description>Brand code of the submission this party is associated with</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BusinessDescription__c</fullName>
        <description>Description of business</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CDDStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type CDD.</description>
        <label>CDD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Citizenship__c</fullName>
        <description>The citizenship of the individual.</description>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Citizenship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CountryOfCitizenship__c</fullName>
        <description>The name of the country of citizenship of the individual.</description>
        <label>Country of citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CountryOfCitizenship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauScore__c</fullName>
        <description>Score given by a credit bureau (e.g. Equifax, TransUnion) to the party. It is a reflection of the party&apos;s credit worthiness.</description>
        <label>Credit bureau score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type CREDIT_BUREAU.</description>
        <label>Credit Bureau status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOutcome__c</fullName>
        <description>Outcome of a Credit decisioning process.</description>
        <label>Credit Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If auto CreditDecisionOutcome was overridden.</description>
        <label>Credit Decision Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related (Credit) Matrix. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of rules (based on new facts) yield better results.</description>
        <label>Credit Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Credit Decisioned Parties</relationshipLabel>
        <relationshipName>CreditDecisionedParties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__CreditFacilityType__c</fullName>
        <description>Credit facility type for the current application. Values are Individual or Joint</description>
        <label>Credit facility type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditFacilityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DUNSNumber__c</fullName>
        <description>The D-U-N-S Number is D&amp;B&apos;s identification number, which provides unique identification of this organization, in accordance with the Data Universal Numbering System</description>
        <encryptionScheme>None</encryptionScheme>
        <label>D-U-N-S Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauScore__c</fullName>
        <description>Score given by a debit bureau (e.g. ChexSystems) to the party. e.g. QualiFile score. It is a reflection of the party&apos;s banking behavour.</description>
        <label>Debit Bureau score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type DEBIT_BUREAU.</description>
        <label>Debit Bureau status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DemographicCaptureMethod__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the method used to take the application</description>
        <label>Demographic capture method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DemographicCaptureMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DeviceStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type DEVICE.</description>
        <label>Device status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the applicant does not want to receive calls.</description>
        <label>Do not call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DoNotEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the applicant does not want to receive emails.</description>
        <label>Do not email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DoNotText__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the applicant does not want to receive sms text messages.</description>
        <label>Do not text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DoingBusinessAs__c</fullName>
        <description>A company is said to be &quot;doing business as&quot; when the name under which they operate their business differs from its legal, registered name. Some states require dba or fictitious business name filings to be made for the protection of consumers conducting business with the entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Doing business as</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DomesticRelationshipIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the borrower is in a civil union, domestic partnership, or registered reciprocal beneficiary relationship recognized by the State in which he/she currently resides or where the property is located.</description>
        <label>Domestic relationship indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DomesticRelationshipStateCode__c</fullName>
        <description>When true, indicates that the borrower is in a civil union, domestic partnership, or registered reciprocal beneficiary relationship recognized by the State in which he/she currently resides or where the property is located.</description>
        <label>Domestic relationship state code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DomesticRelationshipTypeDescription__c</fullName>
        <description>A free-form text field that specifies the enumeration when the value of Other is used for the Domestic Relationship Type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Domestic relationship type description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DomesticRelationshipType__c</fullName>
        <description>Specifies a borrowers relationship with an individual who is not a legal spouse but who has real property rights similar to those of a legal spouse.</description>
        <label>Domestic relationship type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DomesticRelationshipType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EstablishmentDate__c</fullName>
        <description>Date on which company was established</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Establishment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__EthnicityManuallyDetermined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates the ethnicity was collected based on visual observation or surname</description>
        <label>Ethnicity manually determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EthnicityOriginTypeOther__c</fullName>
        <description>A free-form text field that specifies the enumeration when the value of Other is used for HMDA Ethnicity Origin Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ethnicity origin type other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EthnicityOriginType__c</fullName>
        <description>Represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s ethnicity origin as defined in the Home Mortgage Disclosure Act (HMDA).</description>
        <label>Ethnicity origin type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HispanicOrLatinoEthnicityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EthnicityType__c</fullName>
        <description>Represents the borrower&apos;s or interviewer&apos;s statement about the borrower&apos;s ethnicity as defined in the Home Mortgage Disclosure Act (HMDA)</description>
        <label>Ethnicity type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EthnicityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalCryptoCustomerId__c</fullName>
        <description>ID of the customer in crypto custodial solutions system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External crypto customer id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalCustomerId__c</fullName>
        <description>This is the ID of the customer in core banking system.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the ID of the customer in core banking system.</inlineHelpText>
        <label>Core Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FicoScore__c</fullName>
        <description>The fico score of the individual</description>
        <label>Fico score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialInformationAsOf__c</fullName>
        <description>The date on which this financial information was captured or is effective from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial information as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__FirstName__c</fullName>
        <description>The first name of the individual represented by the parent object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FraudStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type FRAUD.</description>
        <label>Fraud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__GenderManuallyDetermined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates the gender was collected based on visual observation or surname</description>
        <label>Gender manually determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Gender__c</fullName>
        <description>Gender of the applicant</description>
        <label>Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__HasDependents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if Party has dependents</description>
        <label>HasDependents</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>